<resources>
    <string name="app_name">REST Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_btn_delete">Hapus</string>
    <string name="txt_menu_edit_data">Edit Data</string>
    <string name="txt_menu_refresh">Refresh</string>
    <string name="txt_menu_about_umar">About Umar</string>
    <string name="txt_btn_tambah_data">Tambah Data</string>
    <string name="txt_hint_email">Email</string>
    <string name="txt_hint_telepon">Telepon</string>
    <string name="txt_hint_alamat">Alamat</string>
    <string name="txt_hint_nama_lengkap">Nama Lengkap</string>
    <string name="txt_btn_update_data">Update Data</string>
    <string name="txt_edit_info">Untuk edit data, jangan lupa memasukkan ID User</string>
    <string name="txt_hint_masukkan_id_user_yang_diedit">Masukkan ID User yang diedit</string>
    <string name="dialog_konfirmasi">Hapus data ini?</string>
    <string name="option_yes">Ya</string>
    <string name="option_no">Tidak</string>
    <string name="txt_hint_delete">Masukkan ID User yang dihapus</string>
    <string name="txt_menu_delete_data">Delete Data</string>
    <string name="umar">Umar Hadi Siswanto</string>
    <string name="nim">5180411012</string>
    <string name="github_com_umarhadi_rest_client">github.com/umarhadi/rest-client</string>
    <string name="api">api.umarhadi.xyz/index.php/penduduk</string>
    <string name="txt_hint_format_tgl">Format Tanggal (YYYY-MM-DD)</string>
</resources>